Only ReadMe.md and Trimming remains

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <div class="card-body"> 
         
                 <h5 class="card-title">Want to check more projects like this?Use the link given below</h5>
-                <a class="btn btn-success" target="_blank" href="https://github.com/Mritunjay1121">My repository</a>
+                <a class="btn btn-success" target="_blank" href="https://github.com/Mritunjay1121">My repositories</a>
             </div>
         </div>
         </div>
