Updated templates of categorical column dropdowns

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -73,7 +73,7 @@
                 <select class="form-control" name="Airline" placeholder="Enter a value of Airline"
                     required>
 
-                    <option value="Jet Airways">
+                    <option value="<Jet Airways">
                         &lt;Jet Airways
                     </option>
                     <option value="IndiGo">
@@ -118,7 +118,7 @@
                 <select class="form-control" name="Source" placeholder="Enter a value of Source"
                     required>
 
-                    <option value="Delhi">
+                    <option value="<Delhi">
                         &lt;Delhi
                     </option>
                     <option value="Kolkata">
@@ -144,7 +144,7 @@
                 <select class="form-control" name="Destination" placeholder="Enter a value of Destination"
                     required>
 
-                    <option value="Cochin">
+                    <option value="<Cochin">
                         &lt;Cochin
                     </option>
                     <option value="Banglore">
